# pet-django-project

./: pyproject.toml
django_proj/mysite/mysite/: settings.py  urls.py
django_proj/mysite/osint/: admin.py  models.py  urls.py  views.py
django_proj/mysite/osint/static/osint/: main.css
django_proj/mysite/osint/templates/osint/: base.html
django_proj/mysite/osint/templates/osint/post/: main.html
tests/: test_django_proj.py
