[tool.poetry]
name = "django_proj"
version = "0.1.0"
description = "Pet project with Django"
authors = ["strictodmin"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
